--- a/src/Makefile_p5_e1
+++ b/src/Makefile_p5_e1
@@ -11,17 +11,23 @@
 
 #---------------------------------------------------------
 CC=g++
-
+#---------------------------------------------------------
 CLIENT=Cliente
 SERVER=Servidor
 MULTI_SERVER=ServidorMulticliente
-SOCKET_DIR=Socket
+
+LIB = lib/
+
+SOCKET_DIR= ${LIB}Socket
 SOCKET=${SOCKET_DIR}/Socket
 
-PILATEST = ${LIB_TEST}pobMain
 
 
-CPPFLAGS=-I. -I${SOCKET_DIR} -O2 -std=c++11 -lsockets # Flags compilacion
+TEST = ../test/
+POBTEST = ${TEST}pobMain
+
+#----------------------------------------------------------------------------
+CPPFLAGS=-I. -I${SOCKET_DIR} -I${LIB} -O2 -std=c++11 -lsockets # Flags compilacion
 LDFLAGS=-pthread # Flags linkado threads
 
 all: ${CLIENT} ${SERVER} ${MULTI_SERVER} 
@@ -62,9 +68,11 @@ ${MULTI_SERVER}: ${SOCKET}.o ${MULTI_SERVER}.o
 ${SOCKET}.o: ${SOCKET}.hpp ${SOCKET}.cpp
 	${CC} -c ${CPPFLAGS} ${SOCKET}.cpp -o ${SOCKET}.o
 #-----------------------------------------------------------	
+pobtest: ${POBTEST}.cpp
+	${CC}  ${POBTEST}.cpp ${CPPFLAGS}  -o ${BUILD}pilaTest
+
+#-----------------------------------------------------------	
 #---------------------------------------------------------
-pilatest: ${PILATEST}.cpp
-	${CC}  ${PILATEST}.cpp ${TESTFLAGS}  -o ${BUILD}pilaTest
 # LIMPIEZA
 clean:
 	$(RM) ${SOCKET}.o
