--- a/Makefile_p5_e1
+++ b/Makefile_p5_e1
@@ -16,52 +16,26 @@ CLIENT=Cliente
 SERVER=Servidor
 MULTI_SERVER=ServidorMulticliente
 
-LIB = lib/
+SRC = src
+LIB = ${SRC}/lib
 
 SOCKET_DIR= ${LIB}Socket
 SOCKET=${SOCKET_DIR}/Socket
 
 
 
-TEST = ../test/
-POBTEST = ${TEST}pobMain
+TEST = test
+POBTEST = ${TEST}/pobMain
 
 #----------------------------------------------------------------------------
 CPPFLAGS=-I. -I${SOCKET_DIR} -I${LIB} -O2 -std=c++11 -lsockets # Flags compilacion
 LDFLAGS=-pthread # Flags linkado threads
 
-all: ${CLIENT} ${SERVER} ${MULTI_SERVER} 
+all: 
 #----------------------------------------------------------------------------
 #Para gestionar opciones de compilación según la máquina: hendrix tiene sus manías
 #Descomentar la siguiente línea para compilar en hendrix
 #SOCKETSFLAGS=-lsocket -lnsl
-#-----------------------------------------------------------
-# CLIENTE
-# Compilacion
-${CLIENT}.o: ${CLIENT}.cpp
-	${CC} -c ${CPPFLAGS} ${CLIENT}.cpp
-
-# Linkado
-${CLIENT}: ${SOCKET}.o ${CLIENT}.o  
-	${CC} ${LDFLAGS} ${SOCKET}.o ${CLIENT}.o -o ${CLIENT} ${SOCKETSFLAGS}
-#-----------------------------------------------------------
-# SERVIDOR
-# Compilacion
-${SERVER}.o: ${SERVER}.cpp 
-	${CC} -c ${CPPFLAGS} ${SERVER}.cpp
-
-# Linkado
-${SERVER}: ${SOCKET}.o ${SERVER}.o
-	${CC} ${LDFLAGS} ${SOCKET}.o ${SERVER}.o -o ${SERVER} ${SOCKETSFLAGS}
-#-----------------------------------------------------------
-# SERVIDOR MULTICLIENTE
-# Compilacion
-${MULTI_SERVER}.o: ${MULTI_SERVER}.cpp 
-	${CC} -c ${CPPFLAGS} ${MULTI_SERVER}.cpp
-
-# Linkado
-${MULTI_SERVER}: ${SOCKET}.o ${MULTI_SERVER}.o
-	${CC} ${LDFLAGS} ${SOCKET}.o ${MULTI_SERVER}.o -o ${MULTI_SERVER} ${SOCKETSFLAGS}
 #-----------------------------------------------------------
 # SOCKETS
 # Compilacion libreria de Sockets
