Lo que os he dicho y actualziacion

--- a/src/client/makefile
+++ b/src/client/makefile
@@ -8,8 +8,8 @@
 #---------------------------------------------------------
 CC=g++
 
-SERVER=Servidor
-MONITOR=PoblacionAProcesar
+CLIENTE=Cliente
+MONITOR=PoblacionActual
 
 SOCKET_DIR=Socket
 SOCKET=${SOCKET_DIR}/Socket
@@ -21,7 +21,7 @@ CPPFLAGS=-I. -I${SOCKET_DIR} -O2 -std=c++11 -lsockets # Flags compilacion
 LDFLAGS=-pthread # Flags linkado threads
 
 
-all: ${SERVER}
+all: ${CLIENTE}
 #----------------------------------------------------------------------------
 #Para gestionar opciones de compilación según la máquina: hendrix tiene sus manías
 #Descomentar la siguiente línea para compilar en hendrix
@@ -29,12 +29,12 @@ all: ${SERVER}
 
 # SERVIDOR
 # Compilacion
-${SERVER}.o: ${SERVER}.cpp 
-	${CC} -c ${CPPFLAGS} ${SERVER}.cpp
+${CLIENTE}.o: ${CLIENTE}.cpp 
+	${CC} -c ${CPPFLAGS} ${CLIENTE}.cpp
 
 # Linkado
-${SERVER}: ${SOCKET}.o ${SERVER}.o ${MONITOR}.o ${CAM}.o
-	${CC} ${LDFLAGS} ${SOCKET}.o ${SERVER}.o ${MONITOR}.o ${CAM}.o -o ${SERVER} ${SOCKETSFLAGS}
+${CLIENTE}: ${SOCKET}.o ${CLIENTE}.o ${MONITOR}.o ${CAM}.o
+	${CC} ${LDFLAGS} ${SOCKET}.o ${CLIENTE}.o ${MONITOR}.o ${CAM}.o -o ${CLIENTE} ${SOCKETSFLAGS}
 #-----------------------------------------------------------
 # SOCKETS
 # Compilacion libreria de Sockets
@@ -44,7 +44,7 @@ ${SOCKET}.o: ${SOCKET}.hpp ${SOCKET}.cpp
 # LIMPIEZA
 clean:
 	$(RM) ${SOCKET}.o
-	$(RM) ${SERVER}.o
+	$(RM) ${CLIENTE}.o
 	$(RM) ${MONITOR}.o
 	$(RM) ${CAM}.o
-	$(RM) ${SERVER}
+	$(RM) ${CLIENTE}
