No se bloquea y llega a gen 2

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
         "streambuf": "cpp",
         "random": "cpp",
         "iostream": "cpp",
-        "new": "cpp"
+        "new": "cpp",
+        "string": "cpp"
     }
 }
