--- a/src/client/cliente.config
+++ b/src/client/cliente.config
@@ -1,6 +1,7 @@
 FICHERO DE CONFIGURACIÓN
 
-Puerto:3205
+Puerto:32005
+generaciones:100
 numCiudades:12
 numPersonas:10
 Fichero de datos:../../entradas/uk12.txt
