puertoCs por config

--- a/src/client/cliente.config
+++ b/src/client/cliente.config
@@ -4,6 +4,7 @@ Puerto:32005
 generaciones:100
 numCiudades:12
 numPersonas:10
+PuertoCs:2000
 Fichero de datos:../../entradas/uk12.txt
 SERVERS:{
 localhost
