cambiado config para probar sh07

--- a/src/client/cliente.config
+++ b/src/client/cliente.config
@@ -1,11 +1,18 @@
 FICHERO DE CONFIGURACIÓN
 
-Puerto:3205
-numCiudades:12
-numPersonas:10
-Fichero de datos:../../entradas/uk12.txt
+Puerto:32005
+generaciones:100
+numCiudades:7
+numPersonas:50
+//PuertoCs:2001
+Fichero de datos:../../entradas/sh07.txt
 SERVERS:{
 localhost
 }
+Seleccionar:v1
+
+
+//192.168.0.163
+
 
 
