ajusto config para probar sh07

--- a/src/client/cliente.config
+++ b/src/client/cliente.config
@@ -1,11 +1,11 @@
 FICHERO DE CONFIGURACIÓN
 
 Puerto:32005
-generaciones:10000
-numCiudades:312
-numPersonas:100
+generaciones:60
+numCiudades:7
+numPersonas:60
 PuertoCs:2001
-Fichero de datos:../../entradas/uk12.txt
+Fichero de datos:../../entradas/sh07.txt
 SERVERS:{
 localhost
 }
