--- a/src/client/cliente.config
+++ b/src/client/cliente.config
@@ -5,7 +5,6 @@ generaciones:60
 numCiudades:7
 numPersonas:60
 PuertoCs:2001
-Fichero de datos:../../entradas/sh07.txt
 SERVERS:{
 localhost
 }
@@ -13,6 +12,7 @@ Seleccionar:v1
 
 
 //192.168.0.163
+//Fichero de datos:../../entradas/sh07.txt
 
 
 
