--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
         "iostream": "cpp",
         "new": "cpp",
         "string": "cpp",
-        "__mutex_base": "cpp"
+        "__mutex_base": "cpp",
+        "ostream": "cpp"
     }
 }
