--- a/src/client/cliente.config
+++ b/src/client/cliente.config
@@ -1,3 +1,8 @@
+//*****************************************************************
+// File:   cliente.config
+// Author: Íñigo Aréjula, Sergio Cartiel, Aaron Ibáñez, Héctor García y Marcos Hernando
+// Date:   Noviembre-Enero 2019
+//*****************************************************************
 FICHERO DE CONFIGURACIÓN
 
 Puerto:32004
