--- a/src/client/clienteB.config
+++ b/src/client/clienteB.config
@@ -1,3 +1,8 @@
+//*****************************************************************
+// File:   clienteB.cpp
+// Author: Íñigo Aréjula, Sergio Cartiel, Aaron Ibáñez, Héctor García y Marcos Hernando
+// Date:   Noviembre-Enero 2019
+//*****************************************************************
 FICHERO DE CONFIGURACIÓN
 
 Puerto:2000
